--- a/src/css/utils/defaultButton.module.css
+++ b/src/css/utils/defaultButton.module.css
@@ -4,6 +4,7 @@
   position: relative;
   box-sizing: border-box;
   font-family: "Rowdies-Regular";
+  font-size: inherit;
   cursor: pointer;
   padding: 10px 15px;
   border-radius: 8px;
